Added linkedList example to Makefile, README, and .cvsignore (David, I could've sworn you did this but can't find it in any of the logs).
Alphabetized the tests in the Makefile.

Fixed the description of hello.chpl in the README.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10353 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -7,9 +7,10 @@ This directory contains the following example codes:
      beer.chpl              : computes lyrics to "99 bottles of beer"
      blockLU.chpl           : block LU factorization
      genericStack.chpl      : generic stack classes (list- and array-based)
-     hello.chpl             : "Hello, world!" program using a config variable
+     hello.chpl             : simple Chapel "Hello, world!" program
      iterators.chpl         : sample iterators
      jacobi.chpl            : Jacobi iteration
+     linkedList.chpl        : generic linked list example
      norm.chpl              : sample module for computing array norms
      parallelQuickSort.chpl : parallel quick sort using cobegin and serial
      prod-cons.chpl         : producer-consumer using a sync variable
