--- a/spec/Variables.tex
+++ b/spec/Variables.tex
@@ -168,6 +168,8 @@ Parameter expressions are restricted to the following constructs:
 \item
  The conditional expression where the condition is a parameter and the
  then- and else-expressions are parameters.
+\item
+ Call expressions of parameter functions.  See~\rsec{Parameter_Functions}.
 \end{itemize}
 
 There is an expectation that parameters will be expanded to more types
