Changed file open and close methods to take parenthesis. Updated tests. Updated spec.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10379 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Input_and_Output.tex
+++ b/spec/Input_and_Output.tex
@@ -46,9 +46,9 @@ The file type supports the following methods:
 \index{file type!methods}
 \begin{itemize}
 \item
-The \chpl{open} method opens the file for reading and/or writing.
+The \chpl{open()} method opens the file for reading and/or writing.
 \item
-The \chpl{close} method closes the file for reading and/or writing.
+The \chpl{close()} method closes the file for reading and/or writing.
 \item
 The \chpl{isOpen} method returns true if the file is open for reading
 and/or writing, and otherwise returns false.
