Start using canParam on FnSymbols for functions generated for conditional expressions.  In postFold, where param functions are folded, attempt to fold functions marked canParam as well as functions marked isParam.  Don't issue an error if a canParam function couldn't be folded.
Add a test using a conditional expression to initialize a parameter.

Remove point about destructuring tuple arguments disabling overloading from
STATUS, folding logicals fixed this.

Remove an extra ";\n" from the code generated for some GC primitives.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10383 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Types.tex
+++ b/spec/Types.tex
@@ -188,7 +188,7 @@ binary-digits:
   binary-digit
   binary-digit binary-digits
 
-binary-digits: one of
+binary-digit: one of
   0 1
 \end{syntax}
 Suffixes, like those in C, are not necessary.  The type of an integer
