--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -21,6 +21,7 @@ demonstrate various Chapel features:
      norm.chpl              : sample module for computing array norms
      produceConsume.chpl    : producer-consumer using a sync variable
      quicksort.chpl         : parallel quick sort using cobegin and serial
+     sparse.chpl            : sparse domain/array tutorial example
      tree.chpl              : constructs and walks a tree in parallel
 
 The hpcc06 directory contains Chapel versions of the HPC Challenge
