Made the gen_release script build and include the quick reference document and added it to the list of documents in the README of the release's doc directory.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10422 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/doc/release/README
+++ b/doc/release/README
@@ -12,6 +12,9 @@ This directory contains the following documentation:
   README.prereqs   : prerequisites for using Chapel
   README.cygwin    : notes for Cygwin users
 
+  quickReference.pdf : a one-sheet, tri-fold overview of Chapel syntax
+                       for quick reference
+
   hpcc06.pdf : our report for the 2006 HPC Challenge competition
                (http://www.hpcchallenge.org), which also serves as a
                tutorial to Chapel via three of the HPCC benchmarks:
