Rewrote the producer/consumer example from scratch to use a circular buffer of synchronization variables. This is close to what Wayne had originally envisioned for this benchmark, but at the time it wasn't possible due to lack of array of syncs support.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10431 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -18,7 +18,7 @@ demonstrate various Chapel features:
      jacobi.chpl            : Jacobi iteration
      linkedList.chpl        : generic linked list example
      norm.chpl              : sample module for computing array norms
-     produceConsume.chpl    : producer-consumer using a sync variable
+     prodCons.chpl          : producer-consumer example using circular buffer
      quicksort.chpl         : parallel quick sort using cobegin and serial
      sparse.chpl            : sparse domain/array tutorial example
      tree.chpl              : constructs and walks a tree in parallel
