--- a/README
+++ b/README
@@ -6,8 +6,7 @@ This is a preliminary release of the Chapel compiler, intended for
 release to a small audience for evaluation and feedback purposes.  
 See the LICENSE file for information about legal usage, and please
 also keep in mind any informal discussions you've had with the
-Chapel team about intended use of this release.
-
+Chapel team about the intended use of this release.
 
 
 -----------
@@ -24,7 +23,7 @@ Quick Start
 
         gmake
 
-   or if your default make is GNU make compatible (as on cygwin), use:
+   or if your default make is GNU make compatible (as on Cygwin), use:
 
         make
 
@@ -38,13 +37,13 @@ Quick Start
      ...the Bourne shell (sh)                     . util/setchplenv.sh
 
    You should still be in the "chapel" directory in order for these
-   shell command scripts to work.
+   shell command scripts to work properly.
 
    If you use a different shell, refer to doc/README.chplenv for
    information on what needs to be set up in your environment to use
    Chapel satisfactorily (and if you're able to create an equivalent
-   setchplenv script for your shell, please mail a copy of it to us at
-   chapel_info@cray.com for inclusion in our next release).
+   util/setchplenv.* script for your shell, please mail a copy of it
+   to us at chapel_info@cray.com for inclusion in our next release).
 
 4) Compile an example program using:
 
@@ -61,7 +60,7 @@ What's next?
 
 For more detailed information about...      refer to...
 
-  ...the files and directory structure        ...README.files
+  ...Chapel's file and directory structure    ...README.files
   ...prerequisites for using this release     ...doc/README.prereqs
   ...building the compiler                    ...doc/README.building
   ...setting up your environment              ...doc/README.chplenv
@@ -71,6 +70,8 @@ For more detailed information about...      refer to...
   ...changes since the last release           ...CHANGES
   ...reporting bugs                           ...doc/README.bugs
   ...example Chapel programs                  ...examples/README
-  ...a tutorial using the HPCC benchmarks     ...doc/hpcc06.pdf
+  ...an overview of the Chapel language       ...doc/spec.pdf (Chapter 5)
+  ...a quick reference for Chapel syntax      ...doc/quickReference.pdf
+  ...a tutorial using three HPCC benchmarks   ...doc/hpcc06.pdf
   ...the Chapel language specification        ...doc/spec.pdf
   ...notes for Cygwin users                   ...doc/README.cygwin
