Finished pass over READMEs in the release doc directory.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10439 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/doc/release/README
+++ b/doc/release/README
@@ -23,8 +23,12 @@ This directory contains the following documentation:
   spec.pdf : the current draft of the Chapel language specification
 
 
+--------------------
+For more Information
+--------------------
+
 For further information about Chapel, please refer to the pre-print of
-"Parallel Programmability and the Chapel Language" (to appear in the
+"Parallel Programmability and the Chapel Language" (to appear in an
 upcoming special issue of IJHPCA on High Productivity Programming
 Languages and Models), available at:
 
